[package]
name = "substrate-casper"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.1"
futures-timer = "0.1"
substrate-casper-primitives = { package = "substrate-casper-primitives", path = "primitives" }
client = { package = "substrate-client", path = "../client" }
sr-primitives = {  path = "../sr-primitives" }
